# jabberhive-storage

./: CMakeLists.txt  LICENSE  Makefile  README.md
src/: CMakeLists.txt  Makefile  main.c  pervasive.h
src/core/: CMakeLists.txt  index.c  index.h  index_types.h
src/filter/: CMakeLists.txt  filter.c  filter.h  filter_types.h
src/parameters/: parameters.c  parameters.h  parameters_getters.c  parameters_types.h
src/server/: CMakeLists.txt  server.c  server.h  server_create_socket.c  server_finalize.c  server_initialize.c  server_joining_threads.c  server_new_connection.c  server_signal.c  server_types.h  server_wait_for_event.c  server_worker.c  server_worker_data_merger.c
src/timespec/: CMakeLists.txt  timespec.c  timespec.h
